--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "3.2.5",
+    "sass": "^1.72.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
