--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass": "^1.72.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
