--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "file-type": "^19.0.0",
     "pst-extractor": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
